--- a/cap-bikeshare-dbt/cap_bike/dbt_project.yml
+++ b/cap-bikeshare-dbt/cap_bike/dbt_project.yml
@@ -32,5 +32,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   cap_bike:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    table_names:
       +materialized: view
