--- a/cap-bikeshare-dbt/cap_bike/dbt_project.yml
+++ b/cap-bikeshare-dbt/cap_bike/dbt_project.yml
@@ -32,5 +32,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   cap_bike:
     # Config indicated by + and applies to all files under models/example/
-    table_names:
-      +materialized: view
+    - name: table_names
+    - name: old_format_bikeshare_data
+      materialized: table
+    - name: new_format_bikeshare_data
+      materialized: table
+    - name: cap_share_data_full
+      materialized: table
